--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@
   --light-bgr-cloud: #f4f4fd;
   --primary-bg: #fff;
   --light-slate-color: #8e8f99;
+  --time-transition: 250ms;
+  --cub-bezier: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* global-selectors */
 *,
@@ -69,6 +71,7 @@ body {
   gap: 40px;
 }
 .link-nav {
+  position: relative;
   display: block;
   padding: 24px 0;
   font-family: "Roboto", sans-serif;
@@ -77,12 +80,30 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--nav-blue);
+  transition-property: color;
+  transition-timing-function: var(--cub-bezier);
+  transition-duration: var(--time-transition);
 }
 .link-nav:hover {
   color: var(--pressed-state-ocean);
 }
 .link-nav:focus {
   color: var(--pressed-state-ocean);
+}
+
+.link-nav.active {
+  color: var(--pressed-state-ocean);
+}
+.link-nav.active::after {
+  content: "";
+  display: block;
+  border-radius: 2px;
+  position: absolute;
+  background-color: var(--pressed-state-ocean);
+  width: 100%;
+  height: 4px;
+  bottom: 0;
+  left: 0;
 }
 /* list-address */
 .contacts {
@@ -98,6 +119,9 @@ body {
   font-style: normal;
   letter-spacing: 0.02em;
   color: var(--body-text-slate);
+  transition-property: color;
+  transition-timing-function: var(--cub-bezier);
+  transition-duration: var(--time-transition);
 }
 .link-cont:hover {
   color: var(--pressed-state-ocean);
@@ -106,12 +130,11 @@ body {
   color: var(--pressed-state-ocean);
 }
 /* site-main */
-.main-content {
-  background-color: var(--primary-bg);
-}
 /* block-hero */
 .hero-sect {
   padding-top: 188px;
+  margin-left: auto;
+  margin-right: auto;
   background-color: var(--nav-blue);
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
@@ -153,6 +176,9 @@ body {
   color: var(--primary-bg);
   background-color: var(--primary-brand-iris);
   cursor: pointer;
+  transition-property: background-color;
+  transition-timing-function: var(--cub-bezier);
+  transition-duration: var(--time-transition);
 }
 .order-btn:hover {
   background-color: var(--pressed-state-ocean);
@@ -254,6 +280,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition-property: background-color;
+  transition-timing-function: var(--cub-bezier);
+  transition-duration: var(--time-transition);
 }
 .soc-links:hover {
   background-color: #404bbf;
@@ -329,6 +358,8 @@ body {
   align-items: center;
   justify-content: center;
   color: #afb1b8;
+  transition: color var(--time-transition) var(--cub-bezier),
+    border-color var(--time-transition) var(--cub-bezier);
 }
 .customers-links:hover {
   border-color: #404bbf;
@@ -364,7 +395,6 @@ body {
 /* main-content-portfolio */
 /* block-filtr-btn */
 .gall-link {
-  display: block;
 }
 .gall-link:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -373,6 +403,42 @@ body {
 .gall-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.boxoverlay {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition-property: box-shadow;
+  transition-duration: var(--time-transition);
+  transition-timing-function: var(--cub-bezier);
+  overflow: hidden;
+}
+.window {
+  display: block;
+  padding-left: 32px;
+  padding-right: 32px;
+  padding-top: 40px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0%;
+  left: 0;
+  background-color: var(--primary-brand-iris);
+  transform: translateY(100%);
+  transition-property: transform;
+  transition-duration: var(--time-transition);
+  transition-timing-function: var(--cub-bezier);
+}
+.gall-img {
+  position: absolute;
+}
+.window-parag {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--light-bgr-cloud);
 }
 .portf-sect {
   padding: 96px 0 120px 0;
@@ -398,6 +464,9 @@ body {
   background-color: var(--light-bgr-cloud);
   color: var(--primary-brand-iris);
   cursor: pointer;
+  transition: color var(--time-transition) var(--cub-bezier),
+    background-color var(--time-transition) var(--cub-bezier),
+    box-shadow var(--time-transition) var(--cub-bezier);
 }
 .btn:active {
   font-family: "Roboto", sans-serif;
@@ -435,11 +504,14 @@ body {
 }
 .part-of-gall-list {
   flex-basis: calc((100% - 48px) / 3);
+  position: relative;
+  overflow: hidden;
 }
 .name-categ {
   padding: 32px 16px;
   border: 1px solid var(--btn-brd-collor);
   border-top: none;
+  background-color: var(--primary-bg);
 }
 .gallery {
   font-family: "Roboto";
@@ -501,6 +573,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color var(--time-transition) var(--cub-bezier);
 }
 .soc-med-link:hover {
   background-color: #31d0aa;
