--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,7 @@ body {
   position: absolute;
   width: 100%;
   height: 4px;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   transition-property: background-color;
   transition-timing-function: var(--cub-bezier);
@@ -108,9 +108,10 @@ body {
   border-radius: 2px;
   position: absolute;
   background-color: var(--pressed-state-ocean);
+  color: var(--pressed-state-ocean);
   width: 100%;
   height: 4px;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
 }
 .link-nav:focus::before {
@@ -119,9 +120,10 @@ body {
   border-radius: 2px;
   position: absolute;
   background-color: var(--pressed-state-ocean);
+  color: var(--pressed-state-ocean);
   width: 100%;
   height: 4px;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
 }
 
@@ -131,10 +133,14 @@ body {
   border-radius: 2px;
   position: absolute;
   background-color: var(--pressed-state-ocean);
+  color: var(--pressed-state-ocean);
   width: 100%;
   height: 4px;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
+}
+.link-nav.active {
+  color: var(--pressed-state-ocean);
 }
 /* list-address */
 .contacts {
@@ -427,8 +433,17 @@ body {
 /* block-filtr-btn */
 .gall-link {
   position: relative;
+  z-index: 200;
+  transition-property: box-shadow;
+  transition-duration: var(--time-transition);
+  transition-timing-function: var(--cub-bezier);
+  display: inline-block;
 }
-
+.gall-link:hover,
+.gall-link:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 .gall-link:hover .window {
   transform: translateY(0);
 }
@@ -484,14 +499,16 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  border: 1px solid var(--btn-brd-collor);
+  border: 1px solid;
+  border-color: #e7e9fc;
   border-radius: 4px;
   background-color: var(--light-bgr-cloud);
   color: var(--primary-brand-iris);
   cursor: pointer;
   transition: color var(--time-transition) var(--cub-bezier),
     background-color var(--time-transition) var(--cub-bezier),
-    box-shadow var(--time-transition) var(--cub-bezier);
+    box-shadow var(--time-transition) var(--cub-bezier),
+    border-color var(--time-transition) var(--cub-bezier);
 }
 .btn:active {
   font-family: "Roboto", sans-serif;
@@ -499,6 +516,8 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  border: 1px solid;
+  border-color: transparent;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   background-color: var(--pressed-state-ocean);
@@ -507,14 +526,16 @@ body {
 .btn:hover {
   color: #ffffff;
   background-color: #404bbf;
-  border: 1px solid transparent;
+  border: 1px solid;
+  border-color: transparent;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .btn:focus {
   color: #ffffff;
   background-color: #404bbf;
-  border: 1px solid transparent;
+  border: 1px solid;
+  border-color: transparent;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
@@ -529,14 +550,6 @@ body {
 }
 .part-of-gall-list {
   flex-basis: calc((100% - 48px) / 3);
-}
-.part-of-gall-list:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-.part-of-gall-list:focus {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .name-categ {
   padding: 32px 16px;
@@ -650,6 +663,24 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
   z-index: 120;
+  transition-property: background-color;
+  transition-duration: var(--time-transition);
+  transition-timing-function: var(--cub-bezier);
+}
+.btn-modal:hover,
+.btn-modal:focus {
+  background-color: var(--pressed-state-ocean);
+  border: none;
+}
+.cross {
+  fill: var(--nav-blue);
+  transition-property: fill;
+  transition-duration: var(--time-transition);
+  transition-timing-function: var(--cub-bezier);
+}
+.btn-modal:hover .cross,
+.btn-modal:focus.cross {
+  fill: var(--primary-bg);
 }
 .is-hidden {
   visibility: hidden;
